# pymcpmx

./: .pre-commit-config.yaml  pyproject.toml
examples/: schnider_dadvi.py  schnider_eig.py  schnider_ode_laplace.py
pmxmc/: main.py  utils.py
pmxmc/advan/: __init__.py  eig.py  eigh.py  expm.py  ode.py  ode_scan.py
pmxmc/diagnostics/: plot.py  table.py
pmxmc/io/: __init__.py  read_dataset.py
pymcpmx/advan/: __init__.py  eig.py  eigh.py  ode.py  ode_scan.py
src/pmxmc/: utils.py
src/pmxmc/advan/: __init__.py  eig.py  eigh.py  expm.py  ode.py
src/pmxmc/assets/: schnider.csv
src/pmxmc/diagnostics/: __init__.py  criticism.py  debug.py  plot.py  table.py
src/pmxmc/examples/: schnider_dadvi.py  schnider_eig.py  schnider_eigen.py  schnider_ode_laplace.py  schnider_ode_nuts.py  schnider_threecomp.py  schnider_vectorized.py
src/pmxmc/io/: __init__.py  read_nonmem_dataset.py  read_nonmem_dataset_padded.py
tests/: test_schnider_model.py
